==> Broadcom/AFBR-S50-API/Sources/Platform/NXP_MKLxxZ/driver/uart.c <==
#include "uart.h"
#include "board/board_config.h"
#include "driver/dma.h"
#include "driver/irq.h"
#include "driver/fsl_clock.h"
#include "driver/fsl_port.h"
#include "printf/printf.h"
#include <stdarg.h>
#include <stdlib.h>
#define UART UART_BASEADDR
#define PRINTF_BUFFER_SIZE 1024

status_t UART_Init(void)
{
    if (isInitialized) return STATUS_OK;

    /*****************************************
     * Initialize pins
     *****************************************/
#if defined(CPU_MKL46Z256VLH4) || defined(CPU_MKL46Z256VLL4) || defined(CPU_MKL46Z256VMC4) || defined(CPU_MKL46Z256VMP4)
    CLOCK_EnableClock(kCLOCK_PortA);            /* Ungate the port clock */
    PORT_SetPinMux(PORTA, 1u, kPORT_MuxAlt2);   /* PORTA_PCR1 */
    PORT_SetPinMux(PORTA, 2u, kPORT_MuxAlt2);   /* PORTA_PCR2 */
#elif defined (CPU_MKL17Z256VFM4)
    CLOCK_EnableClock(kCLOCK_PortA);            /* Ungate the port clock */
    PORT_SetPinMux(PORTA, 1u, kPORT_MuxAlt2);   /* PORTA_PCR1 */
    PORT_SetPinMux(PORTA, 2u, kPORT_MuxAlt2);   /* PORTA_PCR2 */
#endif

    /*****************************************
     * Setup DMA module
     *****************************************/
    DMA_Init();

    /* Request DMA channel for TX/RX */
    DMA_ClaimChannel(DMA_CHANNEL_UART_TX, DMA_REQUEST_MUX_UART_TX);

    /* Register callback for DMA interrupt */
    DMA_SetTransferDoneCallback(DMA_CHANNEL_UART_TX, TxDMACallbackFunction, myTxCallbackState);

    /* Set up this channel's control which includes enabling the DMA interrupt */
#if defined(CPU_MKL46Z256VLH4) || defined(CPU_MKL46Z256VLL4) || defined(CPU_MKL46Z256VMC4) || defined(CPU_MKL46Z256VMP4)
    DMA_ConfigTransfer(DMA_CHANNEL_UART_TX, 1, DMA_MEMORY_TO_PERIPHERAL, 0, (uint32_t) (&UART->D), 0); /* dest is data register */
#elif defined (CPU_MKL17Z256VFM4)
    DMA_ConfigTransfer(DMA_CHANNEL_UART_TX, 1, DMA_MEMORY_TO_PERIPHERAL, 0, (uint32_t) (&UART->DATA), 0); /* dest is data register */
#endif

    /*****************************************
     * Setup hardware module
     *****************************************/
#if defined(CPU_MKL46Z256VLH4) || defined(CPU_MKL46Z256VLL4) || defined(CPU_MKL46Z256VMC4) || defined(CPU_MKL46Z256VMP4)
    CLOCK_SetLpsci0Clock(0x1U);
    CLOCK_EnableClock(kCLOCK_Uart0);

    /* Disable TX RX before setting. */
    UART->C2 &= (uint8_t) (~(UART_C2_TE_MASK | UART0_C2_RE_MASK));

#elif defined (CPU_MKL17Z256VFM4)

    CLOCK_SetLpuart0Clock(0x1U);
    CLOCK_EnableClock(kCLOCK_Lpuart0);

    /* Disable LPUART TX RX before setting. */
    UART->CTRL &= ~(LPUART_CTRL_TE_MASK | LPUART_CTRL_RE_MASK);
#endif

    status_t status = SetBaudRate(UART_BAUDRATE, CLOCK_GetFreq(UART_CLKSRC));
    if (status != STATUS_OK) return status;

#if defined(CPU_MKL46Z256VLH4) || defined(CPU_MKL46Z256VLL4) || defined(CPU_MKL46Z256VMC4) || defined(CPU_MKL46Z256VMP4)

    /* disable parity mode */
    UART->C1 &= (uint8_t) (~(UART_C1_PE_MASK | UART_C1_PT_MASK | UART_C1_M_MASK));

    /* set one stop bit per char */
    UART->BDH &= (uint8_t) (~UART0_BDH_SBNS_MASK);
    UART->BDH |= UART0_BDH_SBNS(0U);

    /* enable error interrupts */
    UART->C3 |= UART0_C3_ORIE_MASK; /* Overrun IRQ enable. */
    UART->C3 |= UART0_C3_NEIE_MASK; /* Noise Error IRQ enable. */
    //      UART->C3 |= UART0_C3_FEIE_MASK; /* Framing Error enable. */

    /* enable rx interrupt */
    UART->C2 |= UART0_C2_RIE_MASK;

    /* Enable the LPSCI TX DMA Request */
    UART->C5 |= UART0_C5_TDMAE_MASK;

    /* Enable TX/RX. */
    UART->C2 |= UART0_C2_TE_MASK | UART0_C2_RE_MASK;

    /* Enable interrupt in NVIC. */
    NVIC_SetPriority(UART0_IRQn, IRQPRIO_UART0);

#elif defined (CPU_MKL17Z256VFM4)

    /* disable parity mode */
    UART->CTRL &= (uint8_t)(~(LPUART_CTRL_PE_MASK | LPUART_CTRL_PT_MASK | LPUART_CTRL_M_MASK));

    /* set one stop bit per char */
    UART->BAUD &= (~LPUART_BAUD_SBNS_MASK);
    UART->BAUD |= LPUART_BAUD_SBNS(0U);

    /* enable error interrupts */
    UART->CTRL |= LPUART_CTRL_ORIE_MASK; /* Overrun IRQ enable. */
    UART->CTRL |= LPUART_CTRL_NEIE_MASK; /* Noise Error IRQ enable. */
    //      UART->C3 |= UART0_C3_FEIE_MASK; /* Framing Error enable. */
    /* enable rx interrupt */
    UART->CTRL |= LPUART_CTRL_RIE_MASK;

    /* Enable the LPSCI TX DMA Request */
    UART->BAUD |=LPUART_BAUD_TDMAE_MASK;

    /* enable Break Detect interrupt */
    //UART->BAUD |= LPUART_BAUD_LBKDIE_MASK;
    /* enable RX input Active Edge Interrupt Enable */
    //UART->BAUD |= LPUART_BAUD_RXEDGIE_MASK;
    /* Enable TX/RX. */
    UART->CTRL |= LPUART_CTRL_TE_MASK | LPUART_CTRL_RE_MASK;

    /* Enable interrupt in NVIC. */
    NVIC_SetPriority(LPUART0_IRQn, LPUART0_IRQn);
#endif

    isInitialized = true;
    return STATUS_OK;
}

status_t UART_SetBaudRate(uart_baud_rates_t baudRate)
{
    //assert(isInitialized);
    (void) baudRate;
    return ERROR_NOT_SUPPORTED;
#if 0

    status_t status = UART_CheckBaudRate(baudRate);
    if (status != STATUS_OK) return status;

    /* Check that we're not busy.*/
    IRQ_LOCK();
    if(isTxOnGoing)
    {
        IRQ_UNLOCK();
        return STATUS_BUSY;
    }
    isTxOnGoing = true;
    IRQ_UNLOCK();

    /* remove callback and disable RX line. */
    uart_rx_callback_t callback = myRxCallback;
    UART_SetRxCallback(0);

    /* Disable TX RX before setting. */
#if defined(CPU_MKL46Z256VLH4) || defined(CPU_MKL46Z256VLL4) || defined(CPU_MKL46Z256VMC4) || defined(CPU_MKL46Z256VMP4)
    UART->C2 &= (uint8_t) (~(UART_C2_TE_MASK | UART0_C2_RE_MASK));
#elif defined (CPU_MKL17Z256VFM4)
    UART->CTRL &= ~(LPUART_CTRL_TE_MASK | LPUART_CTRL_RE_MASK);
#endif

    status = SetBaudRate(baudRate, CLOCK_GetFreq(UART_CLKSRC));
    if (status != STATUS_OK) return status;

    /* Enable TX/RX. */
#if defined(CPU_MKL46Z256VLH4) || defined(CPU_MKL46Z256VLL4) || defined(CPU_MKL46Z256VMC4) || defined(CPU_MKL46Z256VMP4)
    UART->C2 |= UART0_C2_TE_MASK | UART0_C2_RE_MASK;
#elif defined (CPU_MKL17Z256VFM4)
    UART->CTRL |= LPUART_CTRL_TE_MASK | LPUART_CTRL_RE_MASK;
#endif

    /* Add callback and enable RX line again. */
    UART_SetRxCallback(callback);

    isTxOnGoing = false;

    return STATUS_OK;
#endif
}

status_t UART_SendBuffer(uint8_t const * txBuff, size_t txSize, uart_tx_callback_t f, void * state)
{
    assert(isInitialized);
    if (!isInitialized) return ERROR_NOT_INITIALIZED;

    /* Debug: only send log entries from threads with lower priority
     * than the UART irq priority. */
//  assert(GET_IPSR() == 0 || GET_IPSR() > 15); // cannot send from exceptions!!

    /* Verify arguments. */
    if(!txBuff || !txSize) return ERROR_INVALID_ARGUMENT;

    /* Check that we're not busy.*/
    IRQ_LOCK();
    if(isTxOnGoing)
    {
        IRQ_UNLOCK();
        return STATUS_BUSY;
    }
    isTxOnGoing = true;
    IRQ_UNLOCK();

    myTxCallback = f;
    myTxCallbackState = state;

    /* Set up this channel's control which includes enabling the DMA interrupt */
    DMA0->DMA[DMA_CHANNEL_UART_TX].SAR = (uint32_t)txBuff;  // set source address

    /* Set up this channel's control which includes enabling the DMA interrupt */
    DMA0->DMA[DMA_CHANNEL_UART_TX].DSR_BCR = DMA_DSR_BCR_BCR(txSize); // set transfer count

    /* Enable the DMA peripheral request */
    DMA0->DMA[DMA_CHANNEL_UART_TX].DCR |= DMA_DCR_ERQ_MASK;

    return STATUS_OK;
}

void UART_SetRxCallback(uart_rx_callback_t f)
{
    assert(isInitialized);
    IRQ_LOCK();
    myRxCallback = f;
    if (f != 0)
    {
#if defined(CPU_MKL46Z256VLH4) || defined(CPU_MKL46Z256VLL4) || defined(CPU_MKL46Z256VMC4) || defined(CPU_MKL46Z256VMP4)
        EnableIRQ(UART0_IRQn);
#elif defined (CPU_MKL17Z256VFM4)
        EnableIRQ(LPUART0_IRQn);
#endif
    }
    else
    {
#if defined(CPU_MKL46Z256VLH4) || defined(CPU_MKL46Z256VLL4) || defined(CPU_MKL46Z256VMC4) || defined(CPU_MKL46Z256VMP4)
        DisableIRQ(UART0_IRQn);
#elif defined (CPU_MKL17Z256VFM4)
        DisableIRQ(LPUART0_IRQn);
#endif
    }
    IRQ_UNLOCK();
}
