==> Broadcom/AFBR-S50-API/Sources/Platform/STM32F4xx/driver/uart.c <==
#include "uart.h"
#include "irq.h"
#include "dma.h"
#include "usart.h"
#include "printf/printf.h"
#include <assert.h>
#include <string.h>
#include <stdarg.h>
#define RX_BUFFER_SIZE 128

status_t UART_Init(void)
{
    MX_DMA_Init();
    MX_USART2_UART_Init();

    return STATUS_OK;
}

status_t UART_SetBaudRate(uart_baud_rates_t baudRate)
{
    status_t status = UART_CheckBaudRate(baudRate);
    if (status != STATUS_OK) return status;

    /* Check module state; TX line must be idle to rest baud rate... */
    IRQ_LOCK();
    if (isTxBusy_)
    {
        IRQ_UNLOCK();
        return STATUS_BUSY;
    }
    isTxBusy_ = true;
    IRQ_UNLOCK();

    /* remove callback and disable RX line. */
    uart_rx_callback_t callback = rxCallback_;
    UART_SetRxCallback(0);

    /* Obtain correct baud rate setting value. */
    uint32_t pclk = 0;
    if ((huart2.Instance == USART1) || (huart2.Instance == USART6))
    {
        pclk = HAL_RCC_GetPCLK2Freq();
    }
    else
    {
        pclk = HAL_RCC_GetPCLK1Freq();
    }

    huart2.Instance->CR1 &= ~(USART_CR1_UE);
    if (huart2.Init.OverSampling == UART_OVERSAMPLING_8)
    {
        huart2.Instance->BRR = UART_BRR_SAMPLING8(pclk, baudRate);
    }
    else
    {
        huart2.Instance->BRR = UART_BRR_SAMPLING16(pclk, baudRate);
    }
    huart2.Init.BaudRate = baudRate;
    huart2.Instance->CR1 |= USART_CR1_UE;


    /* Add callback and enable RX line again. */
    UART_SetRxCallback(callback);

    isTxBusy_ = false;

    return STATUS_OK;
}

status_t UART_SendBuffer(uint8_t const *txBuff, size_t txSize, uart_tx_callback_t f, void *state)
{
    /* Verify arguments. */
    if (!txBuff || txSize == 0)
        return ERROR_INVALID_ARGUMENT;

    /* Lock interrupts to prevent completion interrupt before setup is complete */
    IRQ_LOCK();
    if (isTxBusy_)
    {
        IRQ_UNLOCK();
        return STATUS_BUSY;
    }

    /* Set Tx Busy Status. */
    isTxBusy_ = true;
    txCallback_ = f;
    txCallbackState_ = state;

    HAL_StatusTypeDef hal_error = HAL_UART_Transmit_DMA(&huart2, (uint8_t*) txBuff, txSize);
    IRQ_UNLOCK(); // this must come after HAL_UART_Transmit_DMA to avoid race conditions w/ IRQs

    if (hal_error != HAL_OK)
    {
        //return ERROR_FAIL;
        return -1000 - hal_error;
    }

    return STATUS_OK;
}

void UART_SetRxCallback(uart_rx_callback_t f)
{
    rxCallback_ = f;

    /* Start receiving */
    if (f)
    {
        HAL_UART_Receive_DMA(&huart2, rxBuffer1, RX_BUFFER_SIZE); // Start receiving via DMA
        __HAL_UART_ENABLE_IT(&huart2, UART_IT_IDLE);  // Enable serial port idle interrupt
    }
    else
    {
        HAL_UART_AbortReceive(&huart2);
        HAL_UART_RxCpltCallback(&huart2);
        __HAL_UART_DISABLE_IT(&huart2, UART_IT_IDLE);  // Disable serial port idle interrupt
    }
}
